--- a/luci-app-openclash/luasrc/view/openclash/config_editor.htm
+++ b/luci-app-openclash/luasrc/view/openclash/config_editor.htm
@@ -1,4 +1,3 @@
-<%+cbi/valueheader%>
 <style>
 	.CodeMirror { 
 		text-align: left !important;
@@ -23,12 +22,14 @@
 <script src="/luci-static/resources/openclash/addon/lint/yaml-lint.js"></script>
 <script src="/luci-static/resources/openclash/addon/lint/js-yaml.min.js"></script>
 <script src="/luci-static/resources/openclash/addon/display/fullscreen.js"></script>
+<script src="/luci-static/resources/openclash/addon/display/autorefresh.js"></script>
 
 <script type="text/javascript">//<![CDATA[
-function editor(id,wid,readOnly)
+function editor(id, readOnly, wid, height)
 {
 	var editor = CodeMirror.fromTextArea(id, {
 	mode: "text/yaml",
+	autoRefresh: true,
 	styleActiveLine: true,
 	lineNumbers: true,
 	theme: "material",
@@ -51,17 +52,37 @@ function editor(id,wid,readOnly)
 		editor.setOption("readOnly","true");
 	}
 	
-	editor.setSize(wid,'700px');
-	
+	if (wid && height) {
+		editor.setSize(wid, height);
+	}
 }
+
 var myEditor_use = document.getElementById("cbid.table.1.user");
-var myEditor_use_wid = document.getElementById("cbi-table-1-user").offsetWidth;
 var myEditor_def = document.getElementById("cbid.table.1.default");
-var myEditor_def_wid = document.getElementById("cbi-table-1-default").offsetWidth;
 
-editor(myEditor_use, myEditor_use_wid, 'false'); 
-editor(myEditor_def, myEditor_def_wid, 'true'); 
+if (myEditor_use && myEditor_def) {
+	var myEditor_use_wid = document.getElementById("cbi-table-1-user").offsetWidth;
+	var myEditor_def_wid = document.getElementById("cbi-table-1-default").offsetWidth;
 
+	editor(myEditor_use, 'false', myEditor_use_wid, '700px');
+	editor(myEditor_def, 'true', myEditor_def_wid, '700px');
+}
+
+var myEditor_hosts = document.getElementById("cbid.openclash.config.custom_hosts");
+var myEditor_fall_fil = document.getElementById("cbid.openclash.config.custom_fallback_fil");
+var myEditor_name_pol = document.getElementById("cbid.openclash.config.custom_domain_dns_core");
+var myEditor_name_cus_r1 = document.getElementById("cbid.openclash.config.custom_rules_2");
+var myEditor_name_cus_r2 = document.getElementById("cbid.openclash.config.custom_rules");
+
+if (myEditor_hosts) {
+	editor(myEditor_hosts, 'false');
+}
+
+if (myEditor_fall_fil) {
+	editor(myEditor_fall_fil, 'false');
+	editor(myEditor_name_pol, 'false');
+	editor(myEditor_name_cus_r1, 'false');
+	editor(myEditor_name_cus_r2, 'false');
+}
 //]]>
 </script> 
-<%+cbi/valuefooter%>
